--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -85,7 +85,11 @@
     "sent-packages": "Sent Packages",
     "packageReceivedNotification": "Package received",
     "packageSentNotification": "Package sent",
-    "updateFormTitle": "Update Warehouse Data"
+    "updateFormTitle": "Update Warehouse Data",
+    "updateNotification": "Warehouse data updated",
+    "deleteNotification": "Warehouse deleted",
+    "delete": "Delete Warehouse",
+    "deleteText": "Are you sure you want to delete this warehouse?"
   },
   "wh-btns": {
     "wh-data": "Warehouse Data",
