--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -89,7 +89,9 @@
     "updateNotification": "Warehouse data updated",
     "deleteNotification": "Warehouse deleted",
     "delete": "Delete Warehouse",
-    "deleteText": "Are you sure you want to delete this warehouse?"
+    "deleteText": "Are you sure you want to delete this warehouse?",
+    "notEnoughSpace": "There is not enough space in the warehouse",
+    "noSecondaryWarehouse": "There is no secondary warehouse selected"
   },
   "wh-btns": {
     "wh-data": "Warehouse Data",
